refactor: migrate parallel execution to virtual threads and implement a semaphore-based circuit breaker for controlled concurrency